# email-ipv6

./: .gitignore  Cargo.toml  README.md  config.toml
src/: main.rs
